--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         This website is made with the use of technologies like HTML, CSS, JavaScript and YouTube APIs.
             <br>
         This is an open source project and can easily be found on 
-        <a target=”_blank” href="https://github.com/shashank2171/shashank2171.github.io"><button style="font-size:20px">Github <i class="fa fa-github"></i></button></a>
+        <a target=”_blank” href="https://github.com/NitinSikarwar-32/Music_website"><button style="font-size:20px">Github <i class="fa fa-github"></i></button></a>
             <br>
             <br>
         Our team:
